fixed nav bar alignment on all pages

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -11,7 +11,7 @@
 }
 
 .page-container {
-  min-height: 80vh;
+  min-height: 85vh;
 }
 
 body {
